Closed Bug 480659 Opened 15 years ago Closed 15 years ago

TM: fix arm jsregexp code for 1-char matches

Categories

(Core :: JavaScript Engine, defect)

ARM
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: vlad, Assigned: vlad)

References

Details

(Keywords: fixed1.9.1)

Attachments

(1 file)

Attached patch do itSplinter Review
I misunderstood the code here earlier, and didn't special-case 1-char match nodes like they needed to be.
Attachment #364603 - Flags: review?(dmandelin)
Attachment #364603 - Flags: review?(dmandelin) → review+
Checked in.
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Assignee: general → vladimir
Vlad, is this something not already covered by existing tests?
Blocks: 495746
OS: Windows XP → Linux
Hardware: x86 → ARM
Comment on attachment 364603 [details] [diff] [review]
do it

See bug 495746, please.
Attachment #364603 - Flags: approval1.9.1?
Comment on attachment 364603 [details] [diff] [review]
do it

a191=shaver -- vlad, can you land?
Attachment #364603 - Flags: approval1.9.1? → approval1.9.1+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: