b=480659; special-case 1-char match nodes for ARM jit; r=dmandelin